# python-grpc-argument-validator

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: dev-release-test-pypi.yml  main.yml  pre-commit.yml  release-public-pypi.yml  release.yml  test-and-optional-release.yml  test-and-release-dev-if-pr.yml  test.yml  tests.yml
ci-scripts/: prerelease.sh
docs/: index.html
docs/grpc_argument_validator/: argument_validator_config.html  argument_validators.html  field_path.html  fields.html  index.html  streaming_argument_validators.html  validate_args_decorator.html  validate_streaming_args_decorator.html  validation_context.html  validation_result.html
examples/: example.py
src/grpc_argument_validator/: __init__.py  argument_validator_config.py  argument_validators.py  field_path.py  fields.py  streaming_argument_validators.py  validate_args_decorator.py  validate_streaming_args_decorator.py  validation_context.py  validation_result.py
src/tests/: __init__.py  grpc_argument_validator_test.py  grpc_streaming_argument_validator_test.py
src/tests/route_guide_protos/: route_guide_pb2.py  route_guide_pb2.pyi  route_guide_pb2_grpc.py  run_code_gen.py  run_code_gen.sh
src/tests/route_guide_protos/protos/: route_guide.proto
